--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
-<!DOCTYPE.html>
+<!DOCTYPE html>
 <html>
-  
+  <head>
+    <title>Chase Nielsen child pages website</title>
+    <link rel="stylesheet", type="text/css" href="style.css">
+  </head>
+
+  <body>
+    <h1>Welcome to my website!</h1>
+    <h2>By: <i>Chase Nielsen</i></h2>
+    <br>
+    <center>
+        <div class="test">
+            <br><br>
+            <a href="project-showcase.html"><h1>project showcase</h1><a>
+        </div>
+        <div class="test">
+            <br>
+            <a href="hobbies-interests.html"><h1>hobbies and interests</h1><a>
+        </div>
+        <div class="test">
+            <a href="project-showcase.html"><h1>Tech Stack and skills</h1><a>
+        </div>
+        
+    </center>
+    <img src="61E0A885-1758-49BE-8053-FF0FB03651D2_1_105_c.jpeg" id="home-img">
+  </body>
 </html>
