Add background image and update links in index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
   <head>
     <title>Chase Nielsen child pages website</title>
     <link rel="stylesheet", type="text/css" href="style.css">
+    <style>
+      body{
+        background-image: url('61E0A885-1758-49BE-8053-FF0FB03651D2_1_105_c.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+    </style>
   </head>
 
   <body>
     <h1>Welcome to my website!</h1>
     <h2>By: <i>Chase Nielsen</i></h2>
-    <br>
     <center>
         <div class="test">
             <br><br>
@@ -19,10 +26,12 @@
             <a href="hobbies-interests.html"><h1>hobbies and interests</h1><a>
         </div>
         <div class="test">
-            <a href="project-showcase.html"><h1>Tech Stack and skills</h1><a>
+            <a href="tech-skills.html"><h1>Tech Stack and skills</h1><a>
         </div>
         
     </center>
-    <img src="61E0A885-1758-49BE-8053-FF0FB03651D2_1_105_c.jpeg" id="home-img">
+    <br>
+    <br>
+    <!--<img src="61E0A885-1758-49BE-8053-FF0FB03651D2_1_105_c.jpeg" id="home-img">-->
   </body>
 </html>
