--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet", type="text/css" href="style.css">
     <style>
       body{
-        background-image: url('61E0A885-1758-49BE-8053-FF0FB03651D2_1_105_c.jpeg');
+        /*background-image: url('61E0A885-1758-49BE-8053-FF0FB03651D2_1_105_c.jpeg');
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-size: cover;
+        background-size: cover;*/
       }
     </style>
   </head>
@@ -32,6 +32,14 @@
     </center>
     <br>
     <br>
-    <!--<img src="61E0A885-1758-49BE-8053-FF0FB03651D2_1_105_c.jpeg" id="home-img">-->
+    <script type="module">
+      // this is the code that makes the trailing cursor
+      // I do not take credit for it.
+      // I found it on github at https://github.com/tholman/cursor-effects
+      import { trailingCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
+      new trailingCursor();
+      
+    </script>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   </body>
 </html>
