--- a/hobbies-interests.html
+++ b/hobbies-interests.html
@@ -7,5 +7,15 @@
 
   <body>
     <h1>Welcome to my hobbies and intersests!</h1>
+        <script type="module">
+      // this is the code that makes the trailing cursor
+      // I do not take credit for it.
+      // I found it on github at https://github.com/tholman/cursor-effects
+      import { trailingCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
+      new trailingCursor();
+      
+    </script>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
   </body>
 </html>
