--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet", type="text/css" href="style.css">
     <style>
       body{
-        /*background-image: url('61E0A885-1758-49BE-8053-FF0FB03651D2_1_105_c.jpeg');
+        background-image: url('images/61E0A885-1758-49BE-8053-FF0FB03651D2_1_105_c.jpeg');
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-size: cover;*/
+        background-size: cover;
       }
     </style>
   </head>
