--- a/tech-skills.html
+++ b/tech-skills.html
@@ -7,6 +7,16 @@
 
   <body>
     <h1>Welcome to my tech stack and skills page!</h1>
+    <h2>Over the years I have developed many technical skills</h2>
+    <h3>examples include:</h3>
+    <ul>
+      <li>python</li>
+      <ul>
+        <li>Python Turtle</li>
+        <li>Pygame</li>
+      </ul>
+      <li>javascript</li>
+    </ul>
         <script type="module">
       // this is the code that makes the trailing cursor
       // I do not take credit for it.
