--- a/tech-skills.html
+++ b/tech-skills.html
@@ -12,10 +12,23 @@
     <ul>
       <li>python</li>
       <ul>
-        <li>Python Turtle</li>
-        <li>Pygame</li>
+        <li>Python Turtle <a href="https://www.pythonsandbox.com/docs/turtle">docs</a></li>
+        <li>Pygame <a href="https://www.pygame.org/docs/">docs</a></li>
       </ul>
       <li>javascript</li>
+      <ul>
+        <li>Three.js <a href="https://threejs.org/docs/">docs</a></li>
+        <li>Kaboom <a href="https://kaboomjs.com/">docs</a></li>
+      </ul>
+      <li>Swift</li>
+      <ul>
+        <li>SwiftUI <a href="https://developer.apple.com/documentation/SwiftUI">docs</a></li>
+        <li>AV Foundation <a href="https://developer.apple.com/documentation/avfoundation/">docs</a></li>
+        <li>Strava API <a href="https://developers.strava.com/docs/reference/">docs</a></li>
+        <li>Deepseek API <a href="https://api-docs.deepseek.com/">docs</a></li>
+      </ul>
+      <li>HTML</li>
+      <li>css</li>
     </ul>
         <script type="module">
       // this is the code that makes the trailing cursor
