--- a/tech-skills.html
+++ b/tech-skills.html
@@ -30,6 +30,8 @@
       <li>HTML</li>
       <li>css</li>
     </ul>
+
+    <img src="images/smile.jpeg" width="1000px">
         <script type="module">
       // this is the code that makes the trailing cursor
       // I do not take credit for it.
