--- a/tech-skills.html
+++ b/tech-skills.html
@@ -31,7 +31,7 @@
       <li>css</li>
     </ul>
 
-    <img src="images/smile.jpeg" width="1000px">
+    <center><img src="images/smile.jpeg" width="1000px"></center>
         <script type="module">
       // this is the code that makes the trailing cursor
       // I do not take credit for it.
