Add bottom div for layout structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         background-attachment: fixed;
         background-size: cover;
       }
+      .bottom{
+        position:absolute;
+        bottom:0;
+        width:100vw;
+      }
     </style>
   </head>
 
@@ -30,6 +35,8 @@
         </div>
         
     </center>
+              <div id = "bottom">
+              </div>
     <script type="module">
       // this is the code that makes the trailing cursor
       // I do not take credit for it.
